cleanup & minimize dependencies